--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,13 @@
 {% from 'macros.html' import render_field %}
-<form class="form" action="" method="post">
-	<!--Va a poner todos los tags que estan escondidos del formulario y de esta forma no haya problemas de seguridad de falsificación de formularios-->
-	{{form.hidden_tag()}}
-	{% for field in form %}
-		{{ render_field(field) }}
-	{% endfor %}
-	<button type="submit" id="submit">Registrarse</button>
-</form>
+{% extends 'layout.html' %}
+
+{% block content %}
+	<form class="form" action="" method="post">
+		<!--Va a poner todos los tags que estan escondidos del formulario y de esta forma no haya problemas de seguridad de falsificación de formularios-->
+		{{form.hidden_tag()}}
+		{% for field in form %}
+			{{ render_field(field) }}
+		{% endfor %}
+		<button type="submit" id="submit">Registrarse</button>
+	</form>
+{% endblock %}
