--- a/templates/layout.html
+++ b/templates/layout.html
@@ -71,6 +71,7 @@
              <a href="{{ url_for('index') }}">Todos</a>
 
               {% if current_user.is_authenticated %}
+                <a href="{{ url_for('stream', username = current_user.username) }}">Siguiendo</a>
                 <a href="{{ url_for('post') }}" class="new">Nuevo Post</a>
               {% endif %}
 
