last commit of flask course

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,7 @@
 
                 <!-- Bienvenida -->
                 <h1>
-                  Hola {% if current_user.is_authenticated %} {{current_user.username}} {% endif %}
+                  Hola {{current_user.username}}
                 </h1>
 
             </div>
